--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,23 +4,33 @@
         <!-- load cdn styles -->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/angular-xeditable/0.7.1/css/xeditable.min.css">
+        
         <!-- load app styles -->
         <link rel="stylesheet" href="assets/css/style.css">
         <!-- load cdn scripts -->
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/angular-xeditable/0.7.1/js/xeditable.min.js"></script>
         <script src="assets/js/main/app.js"></script>
+        <script src="assets/js/main/services/svTodos.js"></script>
     </head>
     <body ng-controller="todoController">
         <div class="container">
             <div class="jumbotron text-center">
-                <h1> {{ appName }} <span class="label label-info">10</span></h1>
+                <h1> {{ appName }} <span class="label label-info">{{ todos.length }}</span></h1>
             </div>
 
             <div id="todo-list" class="row">
                 <div class="col-sm-6 col-sm-offset-3">
                     <div class="checkbox" data-ng-repeat="todo in todos">
-                        <input type="checkbox" ng-model="todo.isDone" ><span ng-class="{strike: todo.isDone}"> {{ todo.text }} </span>
+                        <input type="checkbox" ng-model="todo.isDone" data-ng-change="updateTodo(todo)" >
+                        <a href ng-click="deleteTodo(todo)" ><i class="fa fa-remove"></i></a>
+                        <a href ng-click="textBtnForm.$show()" ng-hide="textBtnForm.$visible"><i class="fa fa-edit"></i></a>
+                        <span onaftersave="updateTodo(todo)" ng-class="{strike: todo.isDone}" editable-text="todo.text" e-form="textBtnForm"> {{ todo.text }} </span>
                     </div>
+                    <p class="text-center" ng-shows="loading" >
+                        <span class="fa fa-spinner fa-spin fa-3x"></span>
+                    </p>
                 </div>
             </div>
 
@@ -30,7 +40,7 @@
                         <div class="form-group">
                             <input ng-model="formData.text" placeholder="What do you want to do !" type="text" class="form-control input-lg text-center">
                         </div>
-                        <button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
+                        <button ng-disabled="!formData.text" type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
                     </form>
                 </div>
             </div>
